# Single-Shot-Multibox-Detection-with-CUDA

./: CMakeLists.txt  README.md  image_preprocessing.cpp  image_preprocessing.h  main.cpp  ssd.cpp  ssd.h  utils.cpp  utils.h  vgg16.cpp  vgg16.h  visualization.cpp  visualization.h
